feat(core): Implement route comparison and suggestion logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 # Route-Linter dependencies
-# No external dependencies required for basic functionality
 # Core functionality uses standard library modules only
+
+# Optional dependencies for enhanced functionality
+thefuzz>=0.19.0
+python-Levenshtein>=0.12.2  # For better performance with thefuzz
